<resources>
    <!-- res/values/strings.xml -->

        <string name="btn_back">Back</string>
        <string name="btn_signup">Sign Up</string>
        <string name="hint_email">Email</string>
        <string name="hint_password">Password</string>
        <string name="hint_phone">Phone Number</string>


    <string name="icon1_desc">Leave Application Icon</string>
    <string name="icon2_desc">Attendance Icon</string>
    <string name="icon3_desc">Grades Icon</string>
    <string name="icon4_desc">Timetable Icon</string>
    <string name="icon5_desc">Library Icon</string>
    <string name="icon6_desc">Settings Icon</string>


    <string name="app_name">College App</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="back">Back</string>
    <string name="welcome_message">Welcome to the College App</string>
</resources>
